--- a/style.css
+++ b/style.css
@@ -1,1 +1,92 @@
+* {
+  font-family: Arial, Helvetica, sans-serif;
+}
 
+ul {
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
+  color: #ffffff;
+}
+
+svg {
+  height: 1.3rem;
+  width: auto;
+}
+
+.container {
+  display: grid;
+}
+
+.header {
+  background-color: #ffffff;
+}
+
+.sidebar {
+  background-color: #1a92d4;
+  color: #ffffff;
+  grid-row: 1 / 3;
+}
+
+.sidebar div {
+  font-size: 18px;
+}
+
+.main-content {
+  background-color: #e2e8f0;
+  grid-row: 2;
+
+  display: grid;
+}
+
+.your-projects {
+  grid-column: 1;
+
+  display: grid;
+}
+
+.project-card {
+  background-color: #ffffff;
+  
+}
+
+.side-content {
+  grid-column: 2;
+
+  display: grid;
+}
+
+.announcements {
+  display: grid;
+}
+
+.article {
+  background-color: #ffffff;
+
+}
+
+.trending {
+  display: grid;
+}
+
+.username {
+  background-color: #ffffff;
+
+}
+
+/* colors */
+/* .main,
+.search-field {
+  background-color: #e2e8f0;
+} */
+
+/* .sidebar,
+.button {
+  background-color: #1a92d4;
+} */
+
+/* .project {
+  card-accent-color: #f0b429; // what is this called?
+} */
