--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 * {
   font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 ul {
@@ -12,12 +14,13 @@ a {
 }
 
 svg {
-  height: 1.3rem;
+  height: 1.5rem;
   width: auto;
 }
 
 .container {
   display: grid;
+  grid-template: 1fr 5fr / minmax(300px, 1fr) 5fr;
 }
 
 .header {
@@ -26,12 +29,48 @@ svg {
 
 .sidebar {
   background-color: #1a92d4;
+  height: 100vh;
+  padding: 1rem;
   color: #ffffff;
   grid-row: 1 / 3;
+
+  display: grid;
+  grid-template-rows: repeat(3, min-content);
+  align-items: start;
+  row-gap: 3rem;
 }
 
 .sidebar div {
-  font-size: 18px;
+  font-size: 21px;
+}
+
+.sidebar-title svg {
+  height: 3rem;
+}
+
+.sidebar-title div {
+  font-size: 26px;
+}
+
+.primary-links li,
+.secondary-links li {
+  margin-bottom: 1rem;
+}
+
+.sidebar-title a,
+.primary-links a,
+.secondary-links a {
+  display: grid;
+  gap: 1rem;
+  grid-template-columns: 1fr 5fr;
+  justify-content: start;
+  align-items: center;
+}
+
+.sidebar-title svg,
+.primary-links svg,
+.secondary-links svg {
+  justify-self: center;
 }
 
 .main-content {
