--- a/style.css
+++ b/style.css
@@ -20,17 +20,67 @@ svg {
 
 .container {
   display: grid;
-  grid-template: 1fr 5fr / minmax(300px, 1fr) 5fr;
+  grid-template: 175px 5fr / minmax(300px, 1fr) 5fr;
 }
 
 .header {
   background-color: #ffffff;
+  padding: 1rem 2.5rem;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  grid-column: 2;
+
+  display: grid;
+  grid-template: min-content 1fr / 2fr 1fr;
+  column-gap: 2rem;
+}
+
+.search-area {
+  align-self: center;
+
+  display: grid;
+  grid-template-columns: min-content minmax(200px, 600px);
+  align-items: center;
+  gap: 1rem;
+}
+
+.search-bar {
+  background-color: #e2e8f0;
+  border: none;
+  border-radius: 1rem;
+  height: 2rem;
+  padding: 0 12px;
+}
+
+input[type="search"]:focus {
+  border: none;
+  outline: none;
+}
+
+.user-area {
+  align-self: self-start;
+  
+  display: grid;
+  grid-template-columns: repeat(2, min-content) auto;
+  justify-content: right;
+  align-items: center;
+  column-gap: 1.5rem;
+  padding-right: 40px;
+}
+.user-icon-sm {
+  height: 3.2rem;
+}
+
+.user-area div {
+  font-weight: 700;
+  font-size: 18px;
+  white-space: nowrap;
 }
 
 .sidebar {
   background-color: #1a92d4;
   height: 100vh;
-  padding: 1rem;
+  padding: 1.5rem;
   color: #ffffff;
   grid-row: 1 / 3;
 
@@ -54,7 +104,7 @@ svg {
 
 .primary-links li,
 .secondary-links li {
-  margin-bottom: 1rem;
+  margin-bottom: 1.3rem;
 }
 
 .sidebar-title a,
