--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ svg {
 }
 
 .header {
+  font-weight: 700;
   background-color: #ffffff;
   padding: 1rem 2.5rem;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
@@ -32,7 +33,7 @@ svg {
 
   display: grid;
   grid-template: min-content 1fr / 2fr 1fr;
-  column-gap: 2rem;
+  gap: 0.8rem 2rem;
 }
 
 .search-area {
@@ -44,12 +45,16 @@ svg {
   gap: 1rem;
 }
 
+.search-area svg {
+
+}
+
 .search-bar {
   background-color: #e2e8f0;
   border: none;
   border-radius: 1rem;
   height: 2rem;
-  padding: 0 12px;
+  padding: 0 1rem;
 }
 
 input[type="search"]:focus {
@@ -58,7 +63,7 @@ input[type="search"]:focus {
 }
 
 .user-area {
-  align-self: self-start;
+  align-self: start;
   
   display: grid;
   grid-template-columns: repeat(2, min-content) auto;
@@ -67,14 +72,61 @@ input[type="search"]:focus {
   column-gap: 1.5rem;
   padding-right: 40px;
 }
+
 .user-icon-sm {
   height: 3.2rem;
 }
 
 .user-area div {
-  font-weight: 700;
   font-size: 18px;
   white-space: nowrap;
+}
+
+.user-welcome {
+  display: grid;
+  grid-template: 1fr 1fr / min-content 3fr;
+  align-items: center;
+  column-gap: 1rem;
+}
+
+.user-icon-lg {
+  height: 4.5rem;
+
+  grid-row: 1 / 3;
+}
+
+.welcome-text {
+  font-size: 0.9rem;
+
+  grid-column: 2;
+  align-self: end;
+  padding-bottom: 0.5rem;
+}
+
+.user-welcome div:last-child { 
+  font-size: 22px;
+  white-space: nowrap;
+
+  align-self: start;
+}
+
+.user-actions {
+  padding: 1.5rem;
+  
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 1.5rem;
+  align-content: center;
+}
+
+.user-actions button {
+  background-color: #1a92d4;
+  color: #ffffff;
+  font-size: 0.9rem;
+  border: none;
+  border-radius: 2rem;
+  height: 2.5rem;
+  width: 6.3rem;
 }
 
 .sidebar {
@@ -178,4 +230,5 @@ input[type="search"]:focus {
 
 /* .project {
   card-accent-color: #f0b429; // what is this called?
+  color: #656565
 } */
