--- a/style.css
+++ b/style.css
@@ -220,6 +220,8 @@ input[type="search"]:focus {
   border-radius: 0.5rem;
   box-shadow: 3px 3px 5px 0px rgba(0, 0, 0, 0.1);
   padding: 2rem;
+
+  display: grid;
 }
 
 .projects > div,
@@ -229,7 +231,7 @@ input[type="search"]:focus {
 }
 
 .card-text {
-  color: #656565;
+  color: #989898;
   font-size: 1rem;
   font-weight: 400;
 }
@@ -243,26 +245,80 @@ input[type="search"]:focus {
   column-gap: 1.5rem;
 }
 
-.project-card-icon > svg {
-
-}
-
 .side-content {
   height: min-content;
 
   display: grid;
   /* row-gap: 1rem; */
-  grid-template: min-content 1fr min-content 1fr / 275px;
+  grid-template: min-content 1fr min-content 1fr / 274px;
+}
+
+/* .announcements-card,
+.trending-card {
+  height: 325px;
+} */
+
+.article-heading {
+  font-size: 0.9rem;
+  border-bottom: 1px solid #d9d9d9;
+}
+
+.article-heading p {
+  font-size: 0.75rem;
+}
+
+.article-3 {
+  border-bottom: none;
+}
+
+.side-content p {
+  color: #989898;
+  font-weight: 400;
 }
 
 .announcements-card,
 .trending-card {
-  height: 325px;
+    row-gap: 1rem;
 }
+
+.user-list {
+  font-size: 0.9rem;
+
+  display: grid;
+  grid-template: 1fr 1fr / 1fr 3fr;
+  row-gap: 0.2rem;
+  column-gap: 1rem;
+}
+
+.user-list div {
+  align-self: end;
+}
+
+.user-list img {
+  height: 50px;
+
+  grid-row: 1 / 3;
+  grid-column: 1;
+  align-self: center;
+}
+
+.bg-add-tegan {
+  background-color: #e0f2fe;
+  border-radius: 25px;
+}
+
+.bg-add-alex {
+  background-color: #fda4af;
+  border-radius: 25px;
+}
+
+/* trending user handles shouldn't be bolded */
+
+/* need more space between side-content sections */
 
 /* project card doesn't get smaller in width as window gets smaller */
 
-/* prevent project card from getting shorter in height as window shortens */
+/* prevent project card from getting shorter in height (when content doesn't fill up card) as window shortens */
 
 /* shortening the window height cuts off the sidebar once it reaches the cards */
 
